<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <ImageView
        android:id="@+id/main_banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/main_banner"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/businessName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="#607D8B"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/main_banner"
        android:layout_margin="8dp"
        android:textSize="14sp"
        android:textStyle="bold|italic"/>
    <LinearLayout
        android:id="@+id/url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/description"
        android:orientation="horizontal"
        android:layout_margin="8dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/browser_icon" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/url"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/url_layout"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/phone_icon" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/phone"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/phone_layout"
        android:orientation="horizontal"
        android:id="@+id/email_layout"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@mipmap/mail_icon" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/email"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/email_layout"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/address_icon"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/women_model"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/address"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/women1"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/women2"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            />
    </LinearLayout>

</RelativeLayout>
</ScrollView>
